--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,5 +20,7 @@
 body {
   color: rgb(var(--foreground-rgb));
   background-color: #454444;
-  color: whitesmoke
+  color: whitesmoke;
+
+  margin: 6% 15%;
 } 
